# hackscripts-rs

./: Cargo.toml
src/: lib.rs
src/cryptohack/: intro.rs  mathematics.rs  mod.rs
src/cryptohack/utils/bytes/: common.rs  mod.rs  xor.rs
src/cryptohack/utils/crypto/: euclid.rs  math.rs  mod.rs
src/portswigger/: mod.rs  sql_brute.rs  sql_injection.rs
