[package]
name = "hackscripts-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
base64 = "0.22.1"
hex = "0.4.3"
num-bigint = "0.4.6"
num-traits = "0.2.19"
rayon = "1.10.0"
reqwest = { version = "0.12.15", features = ["blocking"] }
tokio = { version = "1.44.2", features = ["full"] }
urlencoding = "2.1.3"
